# symbolic-c

./: .gitignore  CMakeLists.txt  README.md  main.c
resources/icon/variants/ruby/: icon-ruby.rc  icon-ruby.res
src/expression_t/: expression_t.c  expression_t.h  info.txt
src/expression_t/utils/: utils.c  utils.h
src/mem_pool_t/: mem_pool_t.h  mem_pool_t.txt
src/node_t/: ast_node_t.c  ast_node_t.h
src/node_t/node_pool_t/: node_pool_t.c  node_pool_t.h
src/node_t/node_queue_t/: node_queue_t.c  node_queue_t.h
src/queue_t/: queue_t.c  queue_t.h
src/stack_t/: stack_t.c  stack_t.h
src/token_t/: token_t.c  token_t.h
src/token_t/function_t/: function_t.c  function_t.h
src/token_t/number_t/: number_t.c  number_t.h
src/token_t/operator_t/: operator_t.c  operator_t.h
src/token_t/symbol_t/: symbol_t.c  symbol_t.h
src/token_t/token_pool_t/: token_pool_t.c  token_pool_t.h
src/token_t/unary_t/: unary_t.c  unary_t.h
